--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a34b94",
+   "id": "248630c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -37,6 +37,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5de408c2",
+   "metadata": {},
+   "source": [
+    "some of the commonly used libraries used by data Scientists includes:\n",
+    "1. Numpy\n",
+    "2. Pandas\n",
+    "3. Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac23cf1b",
    "metadata": {},
    "source": [
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364501e6",
+   "id": "94dc6f87",
    "metadata": {},
    "source": [
     "### Below are some examples of arithmatic expression"
@@ -59,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74de532d",
+   "id": "916ee74b",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03703b2e",
+   "id": "71d6405d",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da5f5d98",
+   "id": "545e5f8e",
    "metadata": {},
    "source": [
     "**Objectives:**\n",
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23948061",
+   "id": "841d2b55",
    "metadata": {},
    "source": [
     "## Author's Name:\n",
@@ -124,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b74f4820",
+   "id": "d8a3302c",
    "metadata": {},
    "outputs": [],
    "source": []
